# plexus

./: .bencher.json  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  README.md  STYLE_GUIDE.md
.codemap/: config.yaml  overview.md  state.json
.codemap/modules/: include.md  src.md
benchmarks/: benchmark_thread_pool.cpp  benchmark_work_stealing_queue.cpp
include/Cycles/: context.h  execution_graph.h  graph_builder.h  node.h  run_loop.h  thread_pool.h
include/plexus/: execution_graph.h  executor.h  graph_builder.h  node.h  resource.h  thread_pool.h
include/plexus/detail/: function_traits.h
scripts/: compare_commits.sh  run_tsan.sh
src/: context.cpp  execution_graph.cpp  executor.cpp  graph_builder.cpp  ring_buffer.h  run_loop.cpp  task_node_pool.h  thread_pool.cpp  thread_pool.h  work_stealing_queue.h
tests/: test_affinity.cpp  test_concurrency.cpp  test_cycle_detection.cpp  test_error_handling.cpp  test_executor.cpp  test_explicit_ordering.cpp  test_graph_viz.cpp  test_resource.cpp  test_run_loop.cpp  test_stress_loop.cpp  test_thread_pool.cpp  test_topology.cpp  test_ws_queue.cpp
